--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db9de6d",
+   "id": "535e3835",
    "metadata": {},
    "source": [
     "# Inventory"
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e80a520a",
+   "id": "54d7310e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ecfcd74",
+   "id": "f866f292",
    "metadata": {},
    "source": [
     "## Quantity of each product"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1c840d5b",
+   "id": "5a374a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12495133",
+   "id": "ef6ff2e3",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b32f62a2",
+   "id": "54aeba37",
    "metadata": {},
    "source": [
     "## Customer selects 3 products"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "772fcdec",
+   "id": "517bc7e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,15 +140,17 @@
     "        # Store unique products in the set\n",
     "        else:\n",
     "            customer_orders.add(product) \n",
+    "            answer = input('Do you want to add another product (yes/no)?: ')\n",
     "            \n",
-    "            if input('Do you want to add another product (yes/no)?: ') == 'no':\n",
+    "            if answer != 'yes' and answer != 'no'\n",
+    "            if answer == 'no':\n",
     "                break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2051bc9",
+   "id": "a77d07fd",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92ee8346",
+   "id": "7ab005ee",
    "metadata": {},
    "source": [
     "# Statistics\n",
@@ -180,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "355117aa",
+   "id": "27f730d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "41ea4efc",
+   "id": "6083eed8",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "527ad234",
+   "id": "01c6cac3",
    "metadata": {},
    "source": [
     "## Percentage ordered"
@@ -218,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d278d68d",
+   "id": "b7a1e579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4afee7dd",
+   "id": "31f560e4",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4272a5",
+   "id": "3d45fe8b",
    "metadata": {},
    "source": [
     "# Inventory update"
@@ -260,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0b19db75",
+   "id": "bb382dd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "51a583d6",
+   "id": "38303777",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1bdb8b5",
+   "id": "2adcdcd7",
    "metadata": {},
    "outputs": [],
    "source": []
