Solved lab corrected 2

--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "535e3835",
+   "id": "506bb81a",
    "metadata": {},
    "source": [
     "# Inventory"
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "54d7310e",
+   "id": "eefa8e4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f866f292",
+   "id": "8066758d",
    "metadata": {},
    "source": [
     "## Quantity of each product"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a374a5d",
+   "id": "8f050f42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,19 +92,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ef6ff2e3",
+   "id": "a85c8601",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How many items of t-shirt are available?: 9\n",
-      "How many items of mug are available?: 45\n",
-      "How many items of hat are available?: 8\n",
-      "How many items of book are available?: 12\n",
-      "How many items of keychain are available?: 11\n",
-      "{'t-shirt': 9, 'mug': 45, 'hat': 8, 'book': 12, 'keychain': 11}\n"
+      "How many items of t-shirt are available?: 32\n",
+      "How many items of mug are available?: 23\n",
+      "How many items of hat are available?: 12\n",
+      "How many items of book are available?: 78\n",
+      "How many items of keychain are available?: 43\n",
+      "{'t-shirt': 32, 'mug': 23, 'hat': 12, 'book': 78, 'keychain': 43}\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54aeba37",
+   "id": "5dbdc160",
    "metadata": {},
    "source": [
     "## Customer selects 3 products"
@@ -124,14 +124,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "517bc7e4",
+   "id": "6ce55f5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ask the user to specify three products\n",
     "def three_products():\n",
     "    while True:\n",
-    "        product = input(f'Please enter a product: ').strip()\n",
+    "        product = input(f'Please enter a product: ').strip().lower()\n",
     "         \n",
     "        # Check whether the input is valid\n",
     "        if product not in products: \n",
@@ -139,18 +139,25 @@
     "            \n",
     "        # Store unique products in the set\n",
     "        else:\n",
-    "            customer_orders.add(product) \n",
-    "            answer = input('Do you want to add another product (yes/no)?: ')\n",
+    "            customer_orders.add(product)\n",
     "            \n",
-    "            if answer != 'yes' and answer != 'no'\n",
-    "            if answer == 'no':\n",
-    "                break"
+    "            while True:\n",
+    "                answer = input('Do you want to add another product (yes/no)?: ').strip().lower()\n",
+    "            \n",
+    "                if answer not in ('yes','no'):\n",
+    "                    print('There is a typo. Try again.')\n",
+    "                \n",
+    "                elif answer == 'yes':\n",
+    "                    break\n",
+    "                \n",
+    "                elif answer == 'no':\n",
+    "                    return"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a77d07fd",
+   "id": "fedb3cf1",
    "metadata": {},
    "outputs": [
     {
@@ -158,10 +165,8 @@
      "output_type": "stream",
      "text": [
       "Please enter a product: mug\n",
-      "Do you want to add another product (yes/no)?: yes\n",
-      "Please enter a product: book\n",
       "Do you want to add another product (yes/no)?: no\n",
-      "{'mug', 'book'}\n"
+      "{'mug'}\n"
      ]
     }
    ],
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab005ee",
+   "id": "efa1cc33",
    "metadata": {},
    "source": [
     "# Statistics\n",
@@ -181,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "27f730d4",
+   "execution_count": 6,
+   "id": "85ab25cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,18 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6083eed8",
+   "execution_count": 7,
+   "id": "ba44d37c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "57\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#find_number_products = find_number_products()\n",
     "#print(find_number_products)"
@@ -211,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c6cac3",
+   "id": "e1329c62",
    "metadata": {},
    "source": [
     "## Percentage ordered"
@@ -219,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b7a1e579",
+   "execution_count": 8,
+   "id": "2e966ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "31f560e4",
+   "execution_count": 9,
+   "id": "4a73b563",
    "metadata": {},
    "outputs": [
     {
@@ -240,8 +237,8 @@
      "output_type": "stream",
      "text": [
       "Order Statistics:\n",
-      "Total products ordered: 2\n",
-      "Percentage of products ordered: 40%\n"
+      "Total products ordered: 1\n",
+      "Percentage of products ordered: 20%\n"
      ]
     }
    ],
@@ -253,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d45fe8b",
+   "id": "ef6c36fc",
    "metadata": {},
    "source": [
     "# Inventory update"
@@ -261,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bb382dd7",
+   "execution_count": 10,
+   "id": "1400a0e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,19 +272,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "38303777",
+   "execution_count": 11,
+   "id": "188a6989",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-shirt: 9\n",
-      "mug: 44\n",
-      "hat: 8\n",
-      "book: 11\n",
-      "keychain: 11\n"
+      "t-shirt: 32\n",
+      "mug: 22\n",
+      "hat: 12\n",
+      "book: 78\n",
+      "keychain: 43\n"
      ]
     }
    ],
@@ -299,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2adcdcd7",
+   "id": "73280237",
    "metadata": {},
    "outputs": [],
    "source": []
